--- a/cfgs/ssd_mobilenet_1.0_coco_512x512.yaml
+++ b/cfgs/ssd_mobilenet_1.0_coco_512x512.yaml
@@ -6,13 +6,13 @@ train_split: 'train2017'
 val_split: 'val2017'
 
 input_shape: [512, 512]
-batch_size: 32
+batch_size: 8
 
 optimizer: 'sgd'
 lr: 0.001
 wd: 0.0005
 momentum: 0.9
-gpus: 0,1,2,3
+gpus: 0,
 epoch: 200
 use_amp: False
 save_frequent: 10
@@ -26,4 +26,4 @@ network: 'mobilenet1.0'
 layers: ['relu22_fwd', 'relu26_fwd']
 num_filters: [512, 512, 256, 256]
 
-save_prefix: '~/gluon_detector/output'
+save_prefix: '/home/shuailong/SSD.Gluon/output'
